--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-temp testing repo
+This repository will hold all BETA releases of SARAI planting calendar calculator
+
+The project is funded under SARAI project component 1.1
