--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-This repository will hold all BETA releases of SARAI planting calendar calculator
+This repository will hold all BETA releases of SARAI planting calendar calculator for testing
+
+Release history can always be found in the sidebar or at this link:
+
+<https://github.com/chadcomsci/sarai-pub/releases>
 
 The project is funded under SARAI project component 1.1
